# mingelton

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/plugin/: CMakeLists.txt
src/plugin/include/plugin/: plugin.h
src/plugin/src/: plugin.cpp
src/shared/: CMakeLists.txt
src/shared/include/shared/: ConcreteSingleton.h  Simpleton.h  Singleton.h
src/shared/src/: ConcreteSingleton.cpp  Simpleton.cpp
